@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {
  - designation
}

class VaccinationCenter {
  - name
  - address
  - email
  - phoneNumber
  - faxNumber
  - website
}

class WaitingRoom {
  - capacity
  - currentOccupancy
}

class Appointment {
  - date
  - time
  - arrivalTime
  - state
}

class SNSUser {
  - name
  - address
  - sex
  - phoneNumber
  - email
  - birthDate
  - snsUserNumber
  - citizenCardNumber
}

class Nurse {
  - name
  - address
  - phoneNumber
  - email
  - citizenCardNumber
  - employeeId
}

' Relações
Company "1" -- "*" VaccinationCenter : manages >
VaccinationCenter "1" -- "1" WaitingRoom : has >
WaitingRoom "1" -- "*" Appointment : contains >
Appointment "*" -- "1" SNSUser : created for >
Nurse "1" ..> WaitingRoom : consults >

@enduml